--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         getMessages()
     })
 
+    socket.on('message', addMessages)
+
     function addMessages(message){
         $("#messages").append( `<h4>${message.name}</h4>
             <p>${message.message}</p>` )
